--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 <div id="panel">Hello world!</div>
 </section> -->
 
-    <section id="count" class="text-center py-5">
+    <section id="count" class="counter text-center py-5">
       <div class="countdown">
         <div class="container text-center">
           <div class="row timer justify-content-center align-content-center text-center">
